src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Abbreviated_Name__c</fullName>
        <description>Displays a shortened version of the Account name.</description>
        <inlineHelpText>Displays a shortened version of the Account name.</inlineHelpText>
        <label>Abbreviated Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Academic_Achievement__c</fullName>
        <description>Field to identify the academic achievement of the School/College</description>
        <label>Academic Achievement</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_ID_For_Finance_Team__c</fullName>
        <formula>IF( External_Account_Number__c =&quot;&quot;,  Pearson_Account_Number__c ,External_Account_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID For Finance Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_is_Read_only__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is used to make account name read only field</description>
        <label>Account Name is Read only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Record_Count__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Status_GLOBAL__c</fullName>
        <description>Relevant to Learner Account Only: Denotes whether the Learner is a prospect/customer</description>
        <label>Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Student</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alumni</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <description>Core: Status of Bookmaster account</description>
        <label>Account Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Surname__c</fullName>
        <description>The surname of &apos;primary&apos; contact associated to the Learner Account</description>
        <label>Account Surname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Team_Role__c</fullName>
        <label>Account Team Role</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Leader</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Administrator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actuate__c</fullName>
        <description>Field used to hold a link to NA Field Sales external system &apos;Actuate&apos;</description>
        <formula>HYPERLINK(&quot;http://usoldt-as-022:8710/iportal/login.jsp?&quot;, IMAGE(&quot;/resource/ActuateImage&quot;, &quot;ACTUATE1&quot;),&quot;_new&quot;)</formula>
        <label>Actuate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_1_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the Address is a PO Box address. Relates to Physical Address (SFDC Shipping Address)</description>
        <label>Address 1 PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_2_PO_Box__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Identifies if the Address is a PO Box address. Relates to Billing/Mailing Address (SFDC Billing Address)</description>
        <label>Address 2 PO Box</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Adjusted_Enrolments__c</fullName>
        <description>CORE</description>
        <label>Adjusted Enrollments</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Fee__c</fullName>
        <description>Specifies the Annual amount that a Student needs to pay to attend the School.</description>
        <label>Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CertificateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated tax certificate. Applicable only when tax exempt.</description>
        <inlineHelpText>ID of the associated tax certificate. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Certificate</label>
        <referenceTo>Apttus_Config2__TaxCertificate__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DefaultInvoiceTemplate__c</fullName>
        <description>The name of the default invoice template for generating invoices</description>
        <inlineHelpText>The name of the default invoice template for generating invoices</inlineHelpText>
        <label>Default Invoice Template</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the default payment term associated with the account</description>
        <inlineHelpText>ID of the default payment term associated with the account</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExemptStatus__c</fullName>
        <description>The tax exempt status. Applicable only when tax exempt.</description>
        <inlineHelpText>The tax exempt status. Applicable only when tax exempt.</inlineHelpText>
        <label>Tax Exempt Status</label>
        <picklist>
            <controllingField>Apttus_Config2__TaxExempt__c</controllingField>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TaxExempt__c</fullName>
        <description>The tax exempt indicator for the account</description>
        <inlineHelpText>The tax exempt indicator for the account</inlineHelpText>
        <label>Tax Exempt ?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <description>This field is used to capture the Bank Account Number for CTIMGI campuses. Field is referenced in outbound emails.</description>
        <label>Bank Account Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Code__c</fullName>
        <description>Core: Account billing code from Bookmaster</description>
        <label>Billing Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bookmaster_Verified__c</fullName>
        <description>CORE - Formula field to visually flag if an account is in bookmaster or not.</description>
        <formula>IF (
   AND(Create_Bookmaster_Account__c = False, 
         OR(ISBLANK(External_Account_Number__c), 
            BEGINS(External_Account_Number__c, &apos;a&apos;), 
            BEGINS(External_Account_Number__c, &apos;n&apos;))),
IMAGE(&quot;/img/msg_icons/error32.png&quot;,&quot;Red&quot;),
IF (AND(Create_Bookmaster_Account__c = True, ISBLANK(External_Account_Number__c)), 
IMAGE(&quot;/img/msg_icons/warning32.png&quot;,&quot;Orange&quot;),
IMAGE(&quot;/img/msg_icons/confirm32.png&quot;,&quot;Green&quot;) ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bookmaster Verified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIRT_Tool__c</fullName>
        <description>Field used to hold a link to NA Field Sales external system &apos;CIRT&apos;</description>
        <formula>HYPERLINK(&quot;https://247pearsoned.custhelp.com/app/utils/login_form/redirect/rep_ilp&quot;, IMAGE(&quot;/resource/CIRT_Tool_image&quot;, &quot;CIRT1&quot;),&quot;_new&quot;)</formula>
        <label>CIRT Tool</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Calculate_Annual_Fee__c</fullName>
        <description>Hidden field used used when converting the Annual Fee into the currency of the running user</description>
        <label>Calculate Annual Fee</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>CORE - Category types (used for bookmaster)</description>
        <inlineHelpText>Independent - Church covers Anglican, Presbyterian and Methodist faith schools.</inlineHelpText>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Church</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Catholic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Lutheran</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Independent - Christian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Islamic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jewish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Montessori</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steiner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Charter_School__c</fullName>
        <description>CORE adopted from ICOM - Integration field</description>
        <label>Charter School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Bookmaster_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - used to flag if the user wants to create a bookmaster account from a new account created in salesforce.</description>
        <label>Create Bookmaster Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Status__c</fullName>
        <description>Core: Account credit status from Bookmaster</description>
        <label>Credit Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier fields</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DataHub_Key__c</fullName>
        <description>CORE adopted from ICOM - Integration field</description>
        <externalId>true</externalId>
        <label>DataHub Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decile_Number__c</fullName>
        <description>Decile is a Socio Economic grading assigned to New Zealand Schools</description>
        <inlineHelpText>Socio-Economic Status of New Zealand School</inlineHelpText>
        <label>Decile Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Digital_Rating__c</fullName>
        <description>Core: Digital rating for school</description>
        <label>Digital Rating</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Direct_Sales_Territory__c</fullName>
        <description>Direct Sales Territory</description>
        <label>Direct Sales Territory</label>
        <picklist>
            <picklistValues>
                <fullName>UF1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UF2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disciplines__c</fullName>
        <label>Disciplines</label>
        <picklist>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BC6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BS1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ER</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HA</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Discount_Code__c</fullName>
        <description>CORE</description>
        <label>Discount Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance_From_Closest_Campus_in_Km__c</fullName>
        <description>Field to capture the actual distance between the Accounts location and its nearest Pearson campus.</description>
        <label>Distance From Closest Person Campus (km)</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>District_s__c</fullName>
        <description>This field identifies the territory district(s) an account is associated to</description>
        <label>District(s)</label>
        <picklist>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1G</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1N</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2D</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2Q</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>31</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>32</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>33</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3C</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>CORE - Generic Account email
OneCRM - Generic Account email</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equella_User__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Core: designates whether or not the account is currently using equella</description>
        <label>Equella User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_Account_Number__c</fullName>
        <description>CORE - Integration field with Bookmaster</description>
        <externalId>true</externalId>
        <label>External Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Faculty_Advisor_Network__c</fullName>
        <formula>HYPERLINK(&quot;https://neo.pearson.com/groups/faculty-advisor-network&quot;,IMAGE(&quot;/resource/FacultyAdvisornet&quot;,&quot;FacultyAdvisorn&quot;),&quot;_new&quot;)</formula>
        <label>Faculty Advisor Network</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Model__c</fullName>
        <description>Global: Identifies if the Student is required to pay fees to attend.</description>
        <label>Fee Model</label>
        <picklist>
            <picklistValues>
                <fullName>Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>Created for De Duplication Checking of Learner Accounts</description>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <description>Describes the Pearson Region that the creator of the Account is assigned to.</description>
        <label>Geography</label>
        <picklist>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <description>Identifies the phyiscal geographic location of an Account using latitude and longitude of the account.</description>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Grade_0_6_Segment__c</fullName>
        <label>Grade 0-6 Segment</label>
        <picklist>
            <controllingField>School_Type__c</controllingField>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grade_7_Segment__c</fullName>
        <description>Field to track Segment of Secondary grade School</description>
        <label>Grade 7+ Segment</label>
        <picklist>
            <controllingField>School_Type__c</controllingField>
            <picklistValues>
                <fullName>Continue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investigate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Grade__c</fullName>
        <description>CORE adopted from ICOM - Integration field</description>
        <label>High Grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsCreatedFromLead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when a lead is converted ,this checkbox becomes true</description>
        <label>IsCreatedFromLead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kindergarten_Enrollments__c</fullName>
        <description>CORE - Number of students enrolled this year in Kindergarten</description>
        <inlineHelpText>Number of students enrolled this year in Kindergarten</inlineHelpText>
        <label>Kindergarten Enrollments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Created for de-duplication of Record to Check for Learner Accounts</description>
        <label>LastName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_of_Business__c</fullName>
        <description>Describes the Pearson &apos;Line of Business&apos; the account creator is assigned to.</description>
        <label>Line of Business</label>
        <picklist>
            <picklistValues>
                <fullName>Higher Ed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Low_Grade__c</fullName>
        <description>CORE adopted from ICOM - Integration field</description>
        <label>Low Grade</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <description>The market of the Account Creator</description>
        <label>Market</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <inlineHelpText>To track a different name for the account for Marketing/Correspondence purposes.
Example:
BookMaster : Borroloola C E C
Marketing name : Borroloola Community Education Centre</inlineHelpText>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>Created for De-Duplication of records to check For Learner Accounts.</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>NPP_Funded__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Core: Designates whether or not a school has NPP funding</description>
        <label>NPP Funded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nearest_Pearson_Campus__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field to capture the closest Pearson South Africa campus to the Student account</description>
        <label>Nearest Pearson Campus</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Number_enrolled__c</fullName>
        <description>Shows the total number of Students enrolled within a School.</description>
        <label>Full-Time Enrollment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Students_In_Matric_Year__c</fullName>
        <description>D2L specific field: used to record the number of Students within a School Account that are currently sitting their matric exams.</description>
        <label>Number of  Prospective Learners</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oasis__c</fullName>
        <description>Field used to hold a link to NA Field Sales external system &apos;Oasis&apos;</description>
        <formula>HYPERLINK(&quot;https://www.google.co.in/?gfe_rd=cr&amp;ei=f5YSVZ_BOebI8AfYyID4CA&amp;gws_rd=ssl.html&quot;, IMAGE(&quot;/resource/Oasis_image&quot;, &quot;Oasis1&quot;),&quot;_new&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oasis</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Instructions__c</fullName>
        <description>To capture specific instructions when processing orders</description>
        <inlineHelpText>Please enter any specific instructions required for processing orders for this account.</inlineHelpText>
        <label>Order Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Organisation_Type__c</fullName>
        <description>Identifies the type of organisation the Account record is e.g. School/Higher Education etc</description>
        <label>Organisation</label>
        <picklist>
            <picklistValues>
                <fullName>Government/Public</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Higher Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NGO/ Association</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Purchasing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Institution</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Other_Account_Source__c</fullName>
        <description>CORE - Used to track &apos;other lead source&apos; and this is where it maps</description>
        <label>Other Account Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pearson_Account_Number__c</fullName>
        <description>Captures the Pearson &apos;Student Unique Account ID&apos; number (SUID)</description>
        <externalId>true</externalId>
        <label>Pearson Account Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
</CustomObject>